# jobsgrep

./: .env.example  .gitignore  .vercelignore  DISCLAIMER.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  vercel.json
api/: index.py
data/: ats_patterns.json
data/seed/: scored__15a9f8eed6fd797f.json  scored__1fa828760c52bc9b.json  scored__6539bd1ffa84fee3.json  scored__71c04a3f5d26a290.json  scored__b1c5d633ae79e582.json  scored__b50e30aba6dd1fb4.json  scored__b62078982d9df27c.json  scored__babb2f787c12ca90.json  scored__cd69bb81de0c5184.json  scored__d04b7e74c38830f3.json  scored__da5e9c43b86e2d6e.json  scored__f09b8288ca304a36.json  scored__f2a3fc850ce5b49f.json
frontend/: app.js  index.html  styles.css
jobsgrep/: __init__.py  cli.py  config.py  history.py  job_cache.py  llm.py  logging_config.py  main.py  models.py  prefetch.py
jobsgrep/auth/: middleware.py
jobsgrep/discovery/: ats_prober.py  company_list.py
jobsgrep/legal/: audit.py  compliance.py  rate_limiter.py
jobsgrep/nlp/: parser.py  prompts.py
jobsgrep/report/: excel.py
jobsgrep/scoring/: engine.py  prompts.py
jobsgrep/seed_data/: scored__b50e30aba6dd1fb4.json
jobsgrep/sources/: ashby.py  base.py  greenhouse.py  hn_hiring.py  jobspy_source.py  levels_fyi.py  lever.py  recruitee.py  teamblind.py  usajobs.py  workable.py  (+1 more)
scripts/: discover_companies.py  discover_highpaying.py  generate_seed.py  push_scored.py  seed_companies.py  seed_from_cache.py
tests/: test_compliance.py  test_parser.py  test_seed_cache.py  test_sources.py
